# Basic

./: .gitignore  BasicsConfig.h.in  CMakeLists.txt  Main.cpp  README.md  UnitTests.cpp  UnitTests.h  basics_config.h.in
Algebra/Algebra/: AbelianGroupCalculator.cpp  Main.cpp  Permutation.cpp  Permutation.h
Basics/: Basics.sln
Basics/Basics/: Basics.vcxproj  Basics.vcxproj.filters  Main.cpp  UnitTests.cpp  UnitTests.h
Basics/Expressions/: Expression.cpp  Expression.h  Expressions.vcxproj  Expressions.vcxproj.filters  Postfix.cpp  Prefix.cpp
Basics/LinearLists/: LinearLists.vcxproj  LinearLists.vcxproj.filters  LinkedQueue.cpp  SequentialList.cpp  SequentialList.h  SequentialStack.h
Basics/Polynomials/: Field.h  Polynomial.cpp  Polynomial.h  Polynomials.vcxproj  Polynomials.vcxproj.filters
Basics/Sortings/: Algorithms.cpp  Algorithms.h  Sortings.vcxproj  Sortings.vcxproj.filters
Basics/Trees/: BinarySearchTree.cpp  ListSearchTree.h  PriorityQueue.cpp  PriorityQueue.h  Trees.vcxproj  Trees.vcxproj.filters
Conversions/Conversions/Debug/: vc142.idb
Conversions/Conversions/Debug/Conversions.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Conversions/Unit Conversion/Debug/: Unit Conversion.idb  Unit Conversion.vcxproj.FileListAbsolute.txt
Conversions/Unit Conversion/Debug/Unit Conversion.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog  Unit Conversion.lastbuildstate
Expressions/: CMakeLists.txt  Expression.cpp  Expression.h  Postfix.cpp  Postfix.h  Prefix.cpp  Prefix.h
File Manager Emulator/Debug/: File Manager Emulator.ilk  File Manager.lib
File Manager Emulator/File Manager/: FileManager.cpp  FileManager.h
File Manager Emulator/File Manager Emulator/: Main.cpp  UnitTests.cpp
File Manager Emulator/File Manager Emulator/Debug/: vc142.idb
File Manager Emulator/File Manager Emulator/Debug/File Man.67B9001F.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
File Manager Emulator/File Manager/Debug/: File Manager.idb  File Manager.vcxproj.FileListAbsolute.txt
File Manager Emulator/File Manager/Debug/File Manager.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  File Manager.lastbuildstate  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
Iterators/: CMakeLists.txt  back_insert_iterator.h  insert_iterator.h
LinearLists/: CMakeLists.txt  LinkedList.cpp  LinkedList.h  LinkedQueue.cpp  LinkedQueue.h  LinkedStack.cpp  LinkedStack.h  SequentialList.cpp  SequentialList.h  SequentialQueue.cpp  SequentialQueue.h  SequentialStack.cpp  SequentialStack.h  Vector.h
Linux/: binomwithpipe.cpp
Polynomials/: CMakeLists.txt  DividedByZeroException.h  Field.h  Polynomial.h
SegmentTree/SegmentTree/: SegmentTree.h  UnitTests.cpp  UnitTests.h
Sortings/: Algorithms.cpp  Algorithms.h  Algorithms.impl.h  CMakeLists.txt
Tests/: CMakeLists.txt  Iterators_test.cpp  linear_list_test.cpp  polynomial_test.cpp  sorting_test.cpp
Treap/Treap/: ImplicitTreap.cpp  ImplicitTreap.h  Treap.cpp  Treap.h  Treap.vcxproj  Treap.vcxproj.filters  UnitTests.cpp
Trees/: BinarySearchTree.h  CMakeLists.txt  ListSearchTree.cpp  ListSearchTree.h  PriorityQueue.h  RBTree.cpp  RBTree.h  Tree.h
dependencies/: CMakeLists.txt
expressions/: CMakeLists.txt  Expression.cpp  Postfix.cpp  Postfix.h  Prefix.h  expression.cpp  expression.h  expression.hpp  operation.cpp  operation.h  operation.hpp  postfix.cpp  postfix.h  postfix.hpp  prefix.cpp  prefix.h  symbol.cpp  symbol.h  symbol.hpp
iterators/: back_insert_iterator.h  back_insert_iterator.hpp  insert_iterator.h  insert_iterator.hpp  reverse_iterator.h  reverse_iterator.hpp
linear_lists/: CMakeLists.txt  Queue.h  Stack.h  linked_list.cpp  linked_list.h  linked_list.hpp  queue.h  queue.hpp  stack.h  stack.hpp  vector.h  vector.hpp
polynomials/: CMakeLists.txt  DividedByZeroException.h  divided_by_zero_exception.h  field.h  field.hpp  modular_field.hpp  polynomial.h  polynomial.hpp
smart_pointers/: CMakeLists.txt  shared_ptr.h  shared_ptr.hpp  unique_ptr.h  unique_ptr.hpp
sorting_algorithms/: CMakeLists.txt  algorithms.h  algorithms.hpp  algorithms.impl.h  algorithms.impl.hpp
sortings/: Algorithms.h  CMakeLists.txt  algorithms.h  algorithms.impl.h
tests/: CMakeLists.txt  expressions_test.cpp  iterators_test.cpp  linear_list_test.cpp  polynomial_test.cpp  smart_pointers_test.cpp  sorting_test.cpp  trees_test.cpp
trees/: BinarySearchTree.h  CMakeLists.txt  PriorityQueue.cpp  PriorityQueue.h  Tree.cpp  binary_search_tree.cpp  binary_search_tree.h  implicit_treap.cpp  implicit_treap.h  implicit_treap.hpp  list_search_tree.cpp  list_search_tree.h  ordered_map.h  ordered_map.hpp  ordered_set.h  ordered_set.hpp  priority_queue.cpp  priority_queue.h  red_black_tree.cpp  red_black_tree.h  red_black_tree.hpp  treap.cpp  treap.h  treap.hpp  treap_base.h  treap_base.hpp  tree.cpp  tree.h  vector_tree.h  vector_tree.hpp
