cmake_minimum_required(VERSION 3.16)

add_library(Trees
		treap.hpp
		implicit_treap.hpp
		vector_tree.hpp
		ordered_set.hpp
		ordered_map.hpp
		priority_queue.hpp
		priority_queue.cpp
		red_black_tree.hpp
		red_black_tree.cpp
		tree.hpp
		tree.cpp
		binary_search_tree.hpp
        binary_search_tree.cpp)